--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,5 @@ skipsdist = True
 
 [testenv]
 commands = pytest
-# pytest 3.3 depends on attrs module which isn't compatible with Jython
-# pytest issue https://github.com/pytest-dev/pytest/issues/3111 
-# attrs issue https://github.com/python-attrs/attrs/issues/321
 deps =
-    pytest < 3.3
+    pytest
