Add Python 3.11 to the testing matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ matrix:
   - env: TOXENV=py38
   - env: TOXENV=py39
   - env: TOXENV=py310
+  - env: TOXENV=py311
   - env: TOXENV=pypy
   - env: TOXENV=pypy3
