--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
   - env: TOXENV=py310
   - env: TOXENV=py311
   - env: TOXENV=py312
+  - env: TOXENV=py313
   - env: TOXENV=pypy
   - env: TOXENV=pypy38
   - env: TOXENV=pypy39
