--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,py37,py38,py39,py310,py311,py312,pypy,pypy38,pypy39
+envlist = py27,py36,py37,py38,py39,py310,py311,py312,py313,pypy,pypy38,pypy39
 skipsdist = True
 
 [testenv]
